Fix scrolling on iOS with sharing modal open. Closes #203

--- a/less/app.less
+++ b/less/app.less
@@ -941,6 +941,19 @@ header {
 	}
 }
 
+
+.modal-open {
+	.bill,
+	.annotations,
+	body& {
+		overflow: hidden;
+	}
+}
+
+.modal {
+	-webkit-overflow-scrolling: touch;
+}
+
 // Footer
 .bill footer,
 .annotations footer {
